data/tests/typer_error/poly_checking/valid/test5.spl
fun(a, b, c, d) :: a a a a -> Bool {
    return a == c && b == d;
}