data/tests/typer_error/poly_checking/invalid/test1.spl
fun(a, b, c, d) :: a b a c -> Bool {
    return a == c && b == d;
}